--- a/.github/workflows/terraform-fmt-and-plan.yaml
+++ b/.github/workflows/terraform-fmt-and-plan.yaml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      pull-requests: write
     defaults:
       run:
         shell: bash
@@ -34,4 +35,33 @@ jobs:
       - name: validate
         run: terraform validate
       - name: plan
+        id: plan
         run: terraform plan -no-color
+        continue-on-error: true
+      - uses: actions/github-script@v7
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        with:
+          script: |
+            const output = `
+              ### Terraform Plan
+
+              Detect infra code changes. Please check terraform plan result.
+
+              #### result \`${{ steps.plan.outcome }}\`
+
+              <details><summary>Show Plan</summary>
+
+              \`\`\`\n
+              ${{ steps.plan.outputs.stdout }}
+              \`\`\`
+
+              </details>
+            `
+            const masked = output.replaceAll(process.env.AWS_ACCOUNT_ID, '***')
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: masked
+            })
