run ci when changed

--- a/.github/workflows/terraform-fmt-and-plan.yaml
+++ b/.github/workflows/terraform-fmt-and-plan.yaml
@@ -6,6 +6,8 @@ on:
       - synchronize
       - reopened
       - edited
+    paths:
+      - "infra/**"
 jobs:
   terraform-dev:
     runs-on: ubuntu-latest
