--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      issues: write
     defaults:
       run:
         shell: bash
