--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -53,9 +53,11 @@ jobs:
 
               </details>
             `
+            const title = `Deploy at ${(new Date).toString()}`
             const masked = output.replaceAll(process.env.AWS_ACCOUNT_ID, '***')
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: masked
+              body: masked,
+              title,
             })
