--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier . --check",
+    "format": "prettier '**/*.{ts,tsx}' --check",
+    "fix:format": "prettier '**/*.{ts,tsx}' --write",
     "test": "echo 'no test!!'"
   },
   "dependencies": {
